Fix layout issues with layout A challenges encountered in level 6 [#157981432] - center genome layout within its borders - fix layout of "non-standard" allele names (e.g. "tk") - capitalize "MISSION" in bottom HUD for consistency with other labels - fix React PropTypes warning when number of moves is exhausted

--- a/src/stylus/fablevision/fv-genome-challenge.styl
+++ b/src/stylus/fablevision/fv-genome-challenge.styl
@@ -29,6 +29,9 @@
   &#challenges
     #left-column
       width: 450px
+      .genome
+        margin-top: 70px
+        margin-right: 40px
     #center-column
       width: 500px
     #right-column
